add basic header scroll bar functionality.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
+    <header>This is the header</header>
+
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -40,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Empowering Education</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,13 +53,16 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#faq">FAQ</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#lesson">Lesson Plans</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#resource">Resources</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#sign-up">Sign Up</a>
                     </li>
                 </ul>
             </div>
@@ -66,47 +71,123 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Intro Section -->
-    <section id="intro" class="intro-section">
+
+
+    <!-- VID Section -->
+    <section id="vid" class="vid-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Scrolling Nav</h1>
-                    <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                    <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>
+                    <div class="container">
+                      <div class="row">
+                        <div class="span12">
+                        <div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
+                            <iframe allowfullscreen="" src="http://player.vimeo.com/video/71876963" frameborder="0" width="1000" height="562"></iframe>
+                        </div>
+                        </div>
+                      </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- About Section -->
-    <section id="about" class="about-section">
+    <!-- FAQ Section -->
+    <section id="faq" class="faq-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>About Section</h1>
+                <div class="col-md-10 col-md-offset-1">
+                    <h1>FAQ</h1>
+                    <br>
+                    <ul>
+                        <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Aenean pulvinar rhoncus ornare. Nam scelerisque porta erat, eu rhoncus ligula blandit sit amet. Sed sagittis molestie lacinia. Cras luctus et nisi non sagittis.</p> </li>
+                        <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Aenean pulvinar rhoncus ornare. Nam scelerisque porta erat, eu rhoncus ligula blandit sit amet. Sed sagittis molestie lacinia. Cras luctus et nisi non sagittis. Maecenas auctor congue vestibulum. Quisque vehicula massa sed neque sagittis vulputate. Morbi a lacinia diam, nec dignissim tortor. Aliquam erat volutpat. Phasellus ac lorem id diam ultrices elementum id vitae ex. Praesent laoreet aliquet ante, a aliquet nunc pulvinar at. Cras id porta augue. Sed volutpat vel lacus ac consequat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec convallis porta nunc. Nulla efficitur, nisl ac tincidunt molestie, nulla quam vestibulum justo, ut tincidunt eros lacus sed turpis. Aliquam imperdiet varius tellus, venenatis rhoncus ipsum luctus hendrerit. Suspendisse ac tincidunt ligula.</p> </li>
+                        <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Aenean pulvinar rhoncus ornare. Nam scelerisque porta erat, eu rhoncus ligula blandit sit amet. Sed sagittis molestie lacinia. Cras luctus et nisi non sagittis.</p> </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section id="services" class="services-section">
+    <!-- Lesson Section -->
+    <section id="lesson" class="lesson-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Services Section</h1>
+                <div class="col-md-10 col-md-offset-1">
+                    <h1>Lesson Plans</h1>
+                    <ul>
+                      <li>
+                        <a href="somelink">
+                          <img src="pdf_icon.png" style="width:42px;height:42px">
+                        </a>
+                        <span>
+                          <h4>Lesson 1:</h4>
+                          <p>Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Aenean pulvinar rhoncus ornare. Nam scelerisque porta erat, eu rhoncus ligula blandit sit amet. Sed sagittis molestie lacinia. Cras luctus et nisi non sagittis.</p>
+                        </span>
+                      </li>
+
+                      <li>
+                        <a href="somelink">
+                          <img src="pdf_icon.png" style="width:42px;height:42px">
+                        </a>
+                        <span>
+                          <h4>Lesson 2:</h4>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque.</p>
+                        </span>
+                      </li>
+
+                      <li>
+                        <a href="somelink">
+                          <img src="pdf_icon.png" style="width:42px;height:42px">
+                        </a>
+                        <span>
+                          <h4>Lesson 3:</h4>
+                          <p>Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Aenean pulvinar rhoncus ornare. Nam scelerisque porta erat, eu rhoncus ligula blandit sit amet. Sed sagittis molestie lacinia. Cras luctus et nisi non sagittis.</p>
+                        </span>
+                      </li>
+
+                      <li>
+                        <a href="somelink">
+                          <img src="pdf_icon.png" style="width:42px;height:42px">
+                        </a>
+                        <span>
+                          <h4>Lesson 4:</h4>
+                          <p>Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Aenean pulvinar rhoncus ornare. Nam scelerisque porta erat, eu rhoncus ligula blandit sit amet. Sed sagittis molestie lacinia. Cras luctus et nisi non sagittis. Maecenas auctor congue vestibulum.</p>
+                        </span>
+                      </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact-section">
+    <!-- Resource Section -->
+    <section id="resource" class="resource-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Contact Section</h1>
+                <div class="col-md-10 col-md-offset-1">
+                    <h1>Resources</h1>
+                    <p>
+                      The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sign-up Section -->
+    <section id="sign-up" class="sign-up-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1">
+                    <h1>Sign Up</h1>
+                    <form class="form-inline">
+                      <div class="form-group">
+                        <label for="exampleInputEmail">Email</label>
+                        <input type="email" class="form-control" id="exampleInputEmail" placeholder="jane.doe@example.com">
+                      </div>
+                      <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
                 </div>
             </div>
         </div>
