fix spacing/layout issues

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <header>This is the header</header>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -71,6 +70,18 @@
         <!-- /.container -->
     </nav>
 
+    <!-- heading section -->
+   <!-- FAQ Section -->
+    <section id="heading" class="heading-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <!-- VID Section -->
@@ -83,6 +94,7 @@
                         <div class="span12">
                         <div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
                             <iframe allowfullscreen="" src="http://player.vimeo.com/video/71876963" frameborder="0" width="1000" height="562"></iframe>
+                            <p> The Good Life was and is directed by William Shatner.</p>
                         </div>
                         </div>
                       </div>
@@ -97,7 +109,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
-                    <h1>FAQ</h1>
+                    <h1>Frequently Asked Questions</h1>
                     <br>
                     <ul>
                         <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Aenean pulvinar rhoncus ornare. Nam scelerisque porta erat, eu rhoncus ligula blandit sit amet. Sed sagittis molestie lacinia. Cras luctus et nisi non sagittis.</p> </li>
