--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
-                    
+                    <div id="heading-banner">
+                        <h1>Banner PlaceHolder</h1>
+                    </div>
                 </div>
             </div>
         </div>
@@ -91,11 +93,10 @@
                 <div class="col-lg-12">
                     <div class="container">
                       <div class="row">
-                        <div class="span12">
-                        <div class="flex-video widescreen" style="margin: 0 auto;text-align:center;">
-                            <iframe allowfullscreen="" src="http://player.vimeo.com/video/71876963" frameborder="0" width="1000" height="562"></iframe>
-                            <p> The Good Life was and is directed by William Shatner.</p>
-                        </div>
+                        <div class="span10">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="http://player.vimeo.com/video/71876963"></iframe>
+                            </div>
                         </div>
                       </div>
                     </div>
