--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
     </nav>
 
     <!-- heading section -->
-   <!-- FAQ Section -->
     <section id="heading" class="heading-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div id="heading-banner">
                         <h1>Banner PlaceHolder</h1>
+                    </div>
+                    <div id="heading-txt">
+                        <p>Some more text explaining how awesome it is to empower your education!!!</p>
                     </div>
                 </div>
             </div>
@@ -94,9 +96,10 @@
                     <div class="container">
                       <div class="row">
                         <div class="span10">
-                            <div class="embed-responsive embed-responsive-16by9">
+                            <div id="vimeo-video" class="embed-responsive embed-responsive-16by9">
                                 <iframe class="embed-responsive-item" src="http://player.vimeo.com/video/71876963"></iframe>
                             </div>
+                            <p>Just a little caption here to illuminate the above video.</p>
                         </div>
                       </div>
                     </div>
@@ -111,11 +114,25 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <h1>Frequently Asked Questions</h1>
-                    <br>
                     <ul>
-                        <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Aenean pulvinar rhoncus ornare. Nam scelerisque porta erat, eu rhoncus ligula blandit sit amet. Sed sagittis molestie lacinia. Cras luctus et nisi non sagittis.</p> </li>
-                        <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Aenean pulvinar rhoncus ornare. Nam scelerisque porta erat, eu rhoncus ligula blandit sit amet. Sed sagittis molestie lacinia. Cras luctus et nisi non sagittis. Maecenas auctor congue vestibulum. Quisque vehicula massa sed neque sagittis vulputate. Morbi a lacinia diam, nec dignissim tortor. Aliquam erat volutpat. Phasellus ac lorem id diam ultrices elementum id vitae ex. Praesent laoreet aliquet ante, a aliquet nunc pulvinar at. Cras id porta augue. Sed volutpat vel lacus ac consequat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec convallis porta nunc. Nulla efficitur, nisl ac tincidunt molestie, nulla quam vestibulum justo, ut tincidunt eros lacus sed turpis. Aliquam imperdiet varius tellus, venenatis rhoncus ipsum luctus hendrerit. Suspendisse ac tincidunt ligula.</p> </li>
-                        <li><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Aenean pulvinar rhoncus ornare. Nam scelerisque porta erat, eu rhoncus ligula blandit sit amet. Sed sagittis molestie lacinia. Cras luctus et nisi non sagittis.</p> </li>
+                        <li class="dropdown-parents">
+                            <p>Hey this question number one. Click me!</p>
+                            <div class="answer">
+                                <p class="dropdown-hidden">This is the long answer to question one. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. </p>
+                         </li>
+
+                         <li class="dropdown-parents">
+                            <p>And here we have another question that you can also click on!!</p>
+                            <div class="answer">
+                                <p class="dropdown-hidden">This is the long answer to question one. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. In hac habitasse platea dictumst. Cras condimentum dignissim mauris, ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. Fusce fermentum dapibus leo. Suspendisse ac porta lorem. Pellentesque non varius leo, pulvinar ultricies tortor. </p>
+                         </li>
+
+                         <li class="dropdown-parents">
+                            <p>Finally we are done with all these dumb questions.</p>
+                            <div class="answer">
+                                <p class="dropdown-hidden">tortor ut semper velit pellentesque non. Mauris nibh lorem, aliquam sed tortor eget, ornare accumsan neque. Praesent leo arcu, ultrices ut consectetur vulputate, consectetur a nisl. </p>
+                         </li>
+
                     </ul>
                 </div>
             </div>
